# xstars

./: .gitignore  LICENSE  README.md  README.zh-CN.md  XSTARS.xlsm  XSTARS_Templates.xlsx  pyproject.toml  requirements.txt
ribbon/: README.md  customUI14.xml  ribbon_callbacks.bas  ribbon_callbacks_installed.bas  ribbon_callbacks_standalone.bas
tests/: conftest.py  test_config_persistence.py  test_data_handler.py  test_elisa.py  test_end_to_end.py  test_export_and_summary.py  test_plot_engine.py  test_presets.py  test_standard_curve.py  test_stats_engine.py
xstars/: __init__.py  annotations.py  cli.py  config.py  data_handler.py  main.py  plot_engine.py  stats_engine.py  styles.py  ui_dialog.py
xstars/presets/: __init__.py  cck8.py  elisa.py  elisa_dialog.py  qpcr.py  wb.py
xstars/tools/: standard_curve.py  standard_curve_dialog.py
