[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xstars"
version = "1.1.1"
description = "Excel-based Statistics Tool for Analysis, Rapid Significance"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "xlwings>=0.33.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-posthocs>=0.9",
    "statannotations>=0.6",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "ttkbootstrap>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["xstars*"]
